the values of the child nodes, in lexical order.
If there were no child nodes visible to the semantics,
then the second argument is an empty array.

=head1 Marpa::R2 Grammar named arguments, alphabetically

This section accounts for each of the Marpa::R2 grammar's
named arguments, in alphabetical order.

=head2 bless_package

Mostly unchanged.

=head2 source

Mostly unchanged.

=head2 trace_file_handle

Mostly unchanged.

=head2 action_object

Removed.

=head2 default_action

Removed.

=head1 Marpa::R2 Grammar methods, alphabetically

This section accounts for each of the Marpa::R2 grammar's
methods, in alphabetical order.

=head2 g0_rule()

See L</"Rule and symbol accessors are completely different">.

=head2 g0_rule_ids()

See L</"Rule and symbol accessors are completely different">.

=head2 g1_rule_ids()

See L</"Rule and symbol accessors are completely different">.

=head2 new()

See the entries for changes
in the grammar named arguments.

=head2 parse()

Mostly unchanged.

=head2 rule()

See L</"Rule and symbol accessors are completely different">.

=head2 rule_expand()

See L</"Rule and symbol accessors are completely different">.

=head2 rule_ids()

See L</"Rule and symbol accessors are completely different">.

=head2 rule_name()

See L</"Rule and symbol accessors are completely different">.

=head2 rule_show()

See L</"Rule and symbol accessors are completely different">.

=head2 set()

See the entries for changes
in the grammar named arguments.

=head2 show_rules()

See L</"Rule and symbol accessors are completely different">.

=head2 show_symbols()

See L</"Rule and symbol accessors are completely different">.

=head2 start_symbol_id()

See L</"Rule and symbol accessors are completely different">.

=head2 symbol_description()

See L</"Rule and symbol accessors are completely different">.

=head2 symbol_display_form()

See L</"Rule and symbol accessors are completely different">.

=head2 symbol_dsl_form()
