@@ -47,9 +47,9 @@ my $source = <<'END_OF_SOURCE';
   List ::= List Item3 rank => 3
   List ::= List Item2 rank => 2
   List ::= List Item1 rank => 1
-  Item3 ::= VAR '=' VAR rank => 3 action => main::concat
-  Item2 ::= VAR '='     rank => 2 action => main::concat
-  Item1 ::= VAR         rank => 1 action => main::concat
+  Item3 ::= VAR '=' VAR action => main::concat
+  Item2 ::= VAR '='     action => main::concat
+  Item1 ::= VAR         action => main::concat
   VAR ~ [\w]+
 
 END_OF_SOURCE
@@ -66,7 +66,7 @@ my @tests = (
 );
 
 my $grammar = Marpa::R3::Grammar->new(
-    { ranking_method => 'high_rule_only', source => \$source } );
+    { ranking_method => 'high_rank_only', source => \$source } );
 
 for my $test (@tests) {
     my ( $input, $output ) = @{$test};
